build linux package